--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -941,13 +941,31 @@ a {
 
 .tech-stacks-main {
   width: 100%;
+  height: 80%;
   overflow: visible;
   z-index: 1;
   direction: ltr;
   position: relative;
-  text-align: center;
+  display: flex;
+  align-items: flex-start;
+  padding-top: 40px;
+}
+
+.tech-stacks-header{
+  color: #0a4d3f;
+  font-size: 14px;
+  height: 20%;
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-family: Recoleta, serif;
+  font-weight: bold;
+  font-style: italic;
+
+  & > div{
+    margin-bottom: 5px;
+  }
 }
 
 .tech-stacks-main .carousel-wrapper {
@@ -955,8 +973,6 @@ a {
   z-index: 15;
   overflow: hidden;
   height: 100%;
-  display: flex;
-  align-items: center;
 }
 
 .tech-stacks-main .carousel-group {
